Create `mariadb.conf` file for MariaDB configuration
- Copy the original `my.cnf.d/mariadb-server.cnf` to `mariadb.conf` to customize settings.
- In `mariadb.conf`, Comment skip-networking to enable network connections.
- Add to docker-compose.yml under mariadb service:
    volumes:
    env_file:
    restart:
- Simplify start.sh script by removing unnecessary commands and flags.

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,13 +5,7 @@ RUN set -eux; \
 	mkdir -p /run/mysqld /var/lib/mysql; \
 	chown -R mysql:mysql /run/mysqld /var/lib/mysql
 
-# ENTRYPOINT [ "start.sh" ]
+COPY --chmod=600 conf/mariadb.conf /etc/my.cnf.d/mariadb-server.cnf
+COPY --chmod=700 tools/start.sh /usr/local/bin/
 
-# /home/$USER/data/mariadb > /var/lib/mysql/ > rw
-
-# Installing MariaDB/MySQL system tables in '/var/lib/mysql'
-# mariadb-install-db \
-#   --user=mysql \
-#   --datadir=/var/lib/mysql \
-#   --skip-test-db \
-#   --auth-root-authentication-method=normal
+ENTRYPOINT [ "/usr/local/bin/start.sh" ]
