--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,3 +5,9 @@ services:
     container_name: "mariadb"
     ports:
       - "3306:3306"
+    env_file: .env
+    volumes:
+      - type: bind
+        source: /home/${USER}/data/mariadb
+        target: /var/lib/mysql/
+    restart: on-failure
