--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,28 +1,31 @@
 networks:
   inception:
 
-volumes:
-  mariadb:
-
 services:
   mariadb:
     build: requirements/mariadb/
     image: mariadb:42
     container_name: "mariadb"
     env_file: .env
-    networks:
-      - inception
+    networks: [inception]
     volumes:
-      - /Users/${USER}/data/mariadb:/var/lib/mysql/:rw              # or /home/<login>/data/mariadb for defense
+      - /home/${USER}/data/mariadb:/var/lib/mysql/:rw
     restart: on-failure
 
-  # wordpress:
-  #   build: requirements/wordpress/
-  #   image: wordpress:42
-  #   container_name: "wordpress"
-  #   env_file: .env
-  #   networks:
-  #     - inception
-  #   volumes:
-  #     - /Users/${USER}/data/wordpress:/var/lib/mysql/:rw              # or /home/<login>/data/wordpress for defense
-  #   restart: on-failure
+  wordpress:
+    build: requirements/wordpress/
+    image: wordpress:42
+    container_name: "wordpress"
+    env_file: .env
+    networks: [inception]
+    volumes:
+      - /home/${USER}/data/wordpress:/var/www/html/:rw
+    restart: on-failure
+
+  nginx:
+    build: requirements/nginx/
+    image: nginx:42
+    container_name: "nginx"
+    env_file: .env
+    networks: [inception]
+    restart: on-failure
