--- a/srcs/requirements/mariadb/conf/mariadb.conf
+++ b/srcs/requirements/mariadb/conf/mariadb.conf
@@ -4,5 +4,5 @@ datadir=/var/lib/mysql
 socket=/run/mysqld/mysqld.sock
 init_file=/var/lib/mysql/init.sql
 
-bind-address=0.0.0.0
+bind-address=mariadb
 port=3306
