--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,6 +4,9 @@ RUN set -eux; \
 	apk add --no-cache nginx openssl
 
 COPY --chmod=644 conf/nginx.conf /etc/nginx/
-COPY --chmod=700 tools/start.sh /usr/local/bin/
 
-ENTRYPOINT [ "/usr/local/bin/start.sh" ]
+RUN openssl req -x509 -out /etc/nginx/certificate.crt \
+	-keyout /etc/nginx/certificate.key \
+  	-newkey rsa:2048 -nodes -subj '/'
+
+ENTRYPOINT [ "nginx" ]
