--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,15 +12,21 @@ volumes:
       type: none
       o: bind
       device: /home/${USER}/data/wordpress
+  portainer_data:
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/${USER}/data/portainer
 
 services:
   mariadb:
     build: requirements/mariadb/
     image: mariadb:42
+    pull_policy: never
     container_name: "mariadb"
     env_file: .env
     networks: [inception]
-    volumes: [db_data:/var/lib/mysql/:rw]
+    volumes: [db_data:/var/lib/mysql/]
     restart: on-failure
     healthcheck:
       test: mariadb-admin ping -hmariadb -u$MYSQL_USER -p$MYSQL_PASSWORD
@@ -32,14 +38,17 @@ services:
   wordpress:
     build: requirements/wordpress/
     image: wordpress:42
+    pull_policy: never
     container_name: "wordpress"
     env_file: .env
     networks: [inception]
-    volumes: [wp_data:/var/www/html/:rw]
+    volumes: [wp_data:/var/www/html/]
     restart: on-failure
     depends_on:
       mariadb:
         condition: service_healthy
+      redis:
+        condition: service_started
     healthcheck:
       test: nc -z wordpress 9000
       interval: 10s
@@ -50,6 +59,7 @@ services:
   nginx:
     build: requirements/nginx/
     image: nginx:42
+    pull_policy: never
     container_name: "nginx"
     env_file: .env
     networks: [inception]
@@ -59,3 +69,64 @@ services:
     depends_on:
       wordpress:
         condition: service_healthy
+      adminer:
+        condition: service_started
+      static:
+        condition: service_started
+      portainer:
+        condition: service_started
+
+  adminer:
+    build: requirements/bonus/adminer/
+    image: adminer:42
+    pull_policy: never
+    container_name: "adminer"
+    networks: [inception]
+    restart: on-failure
+    depends_on:
+      mariadb:
+        condition: service_healthy
+
+  static:
+    build: requirements/bonus/static/
+    image: static:42
+    pull_policy: never
+    container_name: "static"
+    networks: [inception]
+    restart: on-failure
+
+  redis:
+      build: requirements/bonus/redis/
+      image: redis:42
+      pull_policy: never
+      container_name: "redis"
+      networks: [inception]
+      restart: on-failure
+
+  portainer:
+      build: requirements/bonus/portainer/
+      image: portainer:42
+      pull_policy: never
+      container_name: "portainer"
+      networks: [inception]
+      restart: on-failure
+      volumes:
+        - portainer_data:/var/portainer
+        - /var/run/docker.sock:/var/run/docker.sock
+
+  ftp:
+      build:
+        context: requirements/bonus/ftp
+        args:
+          - FTP_USER=${FTP_USER}
+          - FTP_PASS=${FTP_PASS}
+      image: ftp:42
+      pull_policy: never
+      container_name: "ftp"
+      env_file: .env
+      networks: [inception]
+      volumes: [wp_data:/var/www/html/]
+      restart: on-failure
+      ports:
+        - "21:21"
+        - "21000-21010:21000-21010"
