--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -98,14 +98,51 @@ http {
 
     server {
         listen 443 ssl;
+        server_name abadouab.42.fr;
 
         index index.php;
         root /var/www/html/;
+
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
 
         location ~ \.php$ {
             try_files $uri = 404;
             include fastcgi.conf;
             fastcgi_pass wordpress:9000;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name adminer.abadouab.42.fr;
+
+        index index.php;
+        root /var/www/html/;
+
+        location / {
+            include fastcgi_params;
+            fastcgi_pass adminer:9000;
+            fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name static.abadouab.42.fr;
+
+        location / {
+            proxy_pass http://static:80;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name portainer.abadouab.42.fr;
+
+        location / {
+            proxy_pass http://portainer:9001;
         }
     }
 }
