--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.21
 
 RUN set -eux; \
-	apk add --no-cache php wget php-fpm php-phar php-curl php-mysqli php-iconv; \
+	apk add --no-cache php wget php-fpm php-phar php-curl php-mysqli php-iconv php-tokenizer; \
 	mkdir -p /var/www/html
 
 COPY --chmod=644 conf/www.conf /etc/php83/php-fpm.d/
