--- a/srcs/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsftpd.conf
@@ -1,5 +1,6 @@
 # --- General Settings ---
 listen=YES
+seccomp_sandbox=NO
 
 # --- User Settings ---
 anonymous_enable=NO
@@ -9,9 +10,6 @@ write_enable=YES
 # --- Security (Lock user in their home dir) ---
 chroot_local_user=NO
 allow_writeable_chroot=YES
-
-# --- Directory Settings ---
-local_root=/var/www/html
 
 # --- Passive Mode (CRITICAL) ---
 pasv_enable=YES
