--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,25 +1,16 @@
 FROM alpine:3.21
 
+ARG FTP_USER
+ARG FTP_PASS
+
 RUN set -eux; \
     apk add --no-cache vsftpd; \
-    mkdir -p /var/run/vsftpd/empty
+    mkdir -p /var/run/vsftpd/empty; \
+    adduser --disabled-password --home /var/www/html/ $FTP_USER; \
+    addgroup $FTP_USER nobody; \
+    echo "$FTP_USER:$FTP_PASS" | chpasswd
 
 COPY --chmod=644 conf/vsftpd.conf /etc/vsftpd/
-COPY --chmod=700 tools/start.sh /usr/local/bin/
 
 EXPOSE 21 21000-21010
-ENTRYPOINT [ "/usr/local/bin/start.sh" ]
-
-# FROM debian:bookworm-slim
-
-# RUN set -eux; \
-#     apt-get update; \
-#     apt-get install -y vsftpd; \
-#     mkdir -p /var/run/vsftpd/empty; \
-#     rm -fr /var/lib/apt/lists/*
-
-# COPY --chmod=644 conf/vsftpd.conf /etc/vsftpd/
-# COPY --chmod=700 tools/start.sh /usr/local/bin/
-
-# EXPOSE 21 21000-21010
-# ENTRYPOINT [ "/usr/local/bin/start.sh" ]
+ENTRYPOINT [ "vsftpd", "/etc/vsftpd/vsftpd.conf" ]
